--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -26,10 +26,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-
+          # Cache removed to avoid "lock file not found" error on first run
+          
       - name: Install Dependencies
-        run: npm ci
+        # Changed from 'npm ci' to 'npm install' to work without package-lock.json
+        run: npm install
 
       - name: Build Web App
         env:
@@ -53,4 +54,4 @@ jobs:
         with:
           name: thakira-app-debug
           path: android/app/build/outputs/apk/debug/app-debug.apk
-          retention-days: 5
+          retention-days: 7
