--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "thakira-ai",
   "private": true,
@@ -11,7 +12,9 @@
   "dependencies": {
     "@capacitor/android": "^6.0.0",
     "@capacitor/core": "^6.0.0",
-    "@google/genai": "^1.0.0",
+    "@capacitor/camera": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.0",
+    "@google/genai": "^0.2.1",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
