--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -26,10 +26,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          # Cache removed to avoid "lock file not found" error on first run
           
       - name: Install Dependencies
-        # Changed from 'npm ci' to 'npm install' to work without package-lock.json
         run: npm install
 
       - name: Build Web App
@@ -43,6 +41,24 @@ jobs:
           npx cap add android
           npx cap sync android
 
+      - name: Inject Android Permissions
+        run: |
+          # Define the path to AndroidManifest.xml
+          MANIFEST="android/app/src/main/AndroidManifest.xml"
+          
+          # Inject permissions before the <application> tag
+          # We search for <application and insert permissions before it
+          sed -i '/<application/i \
+          <uses-permission android:name="android.permission.INTERNET" /> \
+          <uses-permission android:name="android.permission.CAMERA" /> \
+          <uses-permission android:name="android.permission.RECORD_AUDIO" /> \
+          <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" /> \
+          <uses-feature android:name="android.hardware.camera" android:required="false" /> \
+          <uses-feature android:name="android.hardware.camera.front" android:required="false" />' $MANIFEST
+          
+          echo "Permissions injected into AndroidManifest.xml"
+          cat $MANIFEST
+
       - name: Build Android APK
         run: |
           cd android
@@ -53,5 +69,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: thakira-app-debug
-          path: android/app/build/outputs/apk/debug/app-debug.apk
+          path: android/app/build/outputs/apk/debug/Thakira-AI-app.apk
+          retention-days: 7
+        with:
+          name: thakira-app-debug
+          path: android/app/build/outputs/apk/debug/Thakira-AI-app.apk
           retention-days: 7
