--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "thakira-ai",
   "private": true,
@@ -14,6 +13,7 @@
     "@capacitor/core": "^6.0.0",
     "@capacitor/camera": "^6.0.0",
     "@capacitor/filesystem": "^6.0.0",
+    "@capacitor/local-notifications": "^6.0.0",
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
